# CineReserve-API

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  documentation.json  entrypoint.sh  pyproject.toml  pytest.ini
src/cinema/: factories.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
src/cinema/management/commands/: seed_data.py
src/cinema/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ticket_digital_id.py
src/cinereserve_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/users/: models.py  serializers.py  views.py
src/users/migrations/: 0001_initial.py
tests/: test_dummy.py  test_redis.py
